--- a/src/app/server-view/server-view.component.html
+++ b/src/app/server-view/server-view.component.html
@@ -45,7 +45,7 @@
                 <p class="text-gray-500">Server:</p>
                 <p class="font-bold text-2xl mt-[-10px]">ecotype-0</p>
 
-                <div class="pushed bg-gray-200 p-5 rounded-lg text-gray-500 my-10">
+                <div class="bg-gray-200 p-5 rounded-lg text-gray-500 my-10">
                   Details server: TODO
                 </div>
 
