--- a/src/app/solar-panel-view/solar-panel-view.component.html
+++ b/src/app/solar-panel-view/solar-panel-view.component.html
@@ -1,3 +1,49 @@
-<div class="solar-panel-view-container">
-    <p>solar-panel-view works!</p>
+<div class="popup-container">
+  <div class="p-3 w-full">
+      <h1>Panneaux solaires</h1>
+      <button class="close-button">╳</button>
+
+      <div class="bumped w-full rounded-lg mt-5">
+        <div class="flex bg-gray-100">
+          <div class="my-auto p-4">
+            <span class="material-icons text-5xl text-yellow-500"> bolt </span>
+          </div>
+          <div class="my-auto flex flex-col text-center px-10">
+            <span class="text-5xl font-bold">300</span>
+            <span class="text-3xl text-gray-500">watt</span>
+          </div>
+          <div class="w-full p-2 m-3 pressed rounded-lg bg-gray-200">
+            <div id="chart-sun"></div>
+          </div>
+        </div>
+
+        <div class="flex justify-around">
+          <div class="p-10">
+            <p class="text-gray-500 text-xl">Température:</p>
+            <p class="font-bold text-4xl">30°C</p>
+          </div>
+
+          <div class="p-10">
+            <p class="text-gray-500 text-xl">Météo:</p>
+            <p class="font-bold text-3xl flex">
+              <i class="material-icons text-4xl text-yellow-500">wb_sunny</i>
+              <span class="px-2 py-0.5">Ensoleillé</span>
+            </p>
+          </div>
+
+          <div class="p-10">
+            <p class="text-gray-500 text-xl">Journée:</p>
+            <p class="font-bold text-2xl flex">
+              <i class="material-icons text-4xl">event</i>
+              <span class="px-2 py-1">Mer 8 Feb 14:30</span>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-gray-200 p-5 rounded-lg text-gray-500 mt-10">
+        Details panneaux: TODO
+      </div>
+
+  </div>
 </div>
