--- a/src/app/result-view/result-view.component.html
+++ b/src/app/result-view/result-view.component.html
@@ -1,1 +1,62 @@
-<p>result-view works!</p>
+<div class="popup-container">
+  <div class="p-3 w-full">
+      <h1>Resultats</h1>
+      <button class="close-button">╳</button>
+
+      <div class="bumped rounded-xl my-3 flex flex-row">
+
+          <div class="p-5 w-[300px]">
+            <h2>Liste des résultats</h2>
+
+            <div class="block overflow-auto mt-5 w-full h-[65vh]">
+              <table class="w-full">
+                <thead class="sticky top-0 bg-gray-100 bumped">
+                  <tr>
+                    <th>Nom de la tâche</th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <tr *ngFor="let i of [0,1,2,3,4,5,6]" class="w-full text-center border-t-[1px] border-gray-300">
+                    <td>reconstruction-{{i}}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="bg-gray-200 text-xs p-1 bumped">7 taches finies</div>
+          </div>
+
+          <div class="p-5 flex flex-col overflow-auto w-full">
+              <h2>Détails de la tâche</h2>
+
+              <div class="pt-5 bumped rounded-xl p-5 bg-gray-100">
+                <p class="text-gray-500">Tâche:</p>
+                <p class="font-bold text-2xl mt-[-10px]">Reconstruction 1</p>
+
+                <div class="bg-gray-200 h-[300px] overflow-hidden pressed rounded-lg text-gray-500 my-3">
+                  <canvas class="h-full w-full"></canvas>
+                </div>
+
+                <p class="text-sm text-gray-500 text-center">Utilisez votre souris pour faire tourner l'objet</p>
+
+                <div class="flex justify-center">
+                  <div class="p-3">
+                    <p>Lancé à 13:00</p>
+                    <p>Fini à 13:06</p>
+                    <p>Durée: 6 minutes</p>
+                  </div>
+                  <div class="border-r-[1px] border-gray-300"></div>
+                  <div class="p-3">
+                    <p>Noeud: Gros 1</p>
+                    <p>CPU: 48</p>
+                    <p>RAM: 64</p>
+                  </div>
+                </div>
+
+                <div id="chart-consumption"></div>
+
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
