--- a/src/app/main-scene/main-scene.component.html
+++ b/src/app/main-scene/main-scene.component.html
@@ -1,3 +1,3 @@
 <canvas #canvas id="canvas" style="width: 100vw; height: 100vh;"></canvas>
 
-<!-- <app-solar-panel-view></app-solar-panel-view> -->
+<app-result-view></app-result-view>
