feat: :zap: Dynamic router in main scene
Handle paths in the main component and open popups

--- a/src/app/solar-panel-view/solar-panel-view.component.html
+++ b/src/app/solar-panel-view/solar-panel-view.component.html
@@ -1,7 +1,7 @@
 <div class="popup-container">
   <div class="p-3 w-full">
       <h1>Panneaux solaires</h1>
-      <button class="close-button">╳</button>
+      <a routerLink="/scene/home" class="close-button">╳</a>
 
       <div class="bumped w-full rounded-lg mt-5">
         <div class="flex bg-gray-100">
