--- a/src/app/launch-view/launch-view.component.html
+++ b/src/app/launch-view/launch-view.component.html
@@ -1,7 +1,7 @@
 <div class="popup-container">
     <div class="p-3 w-full">
         <h1>Lanceur</h1>
-        <button class="close-button">╳</button>
+        <a routerLink="/scene/home" class="close-button">╳</a>
 
         <div class="bumped rounded-xl my-3 flex flex-row">
 
