--- a/src/app/main-scene/main-scene.component.html
+++ b/src/app/main-scene/main-scene.component.html
@@ -1,3 +1,14 @@
-<canvas #canvas id="canvas" style="width: 100vw; height: 100vh;"></canvas>
+<app-background-scene></app-background-scene>
 
-<app-result-view></app-result-view>
+<app-launch-view *ngIf="page == 'launch'"></app-launch-view>
+<app-result-view *ngIf="page == 'result'"></app-result-view>
+<app-server-view *ngIf="page == 'server'"></app-server-view>
+<app-solar-panel-view *ngIf="page == 'panels'"></app-solar-panel-view>
+
+<div *ngIf="page == 'home'" class="absolute top-10 right-10 flex flex-col bg-white p-3">
+  <a routerLink="/scene/home">home</a>
+  <a routerLink="/scene/launch">launch</a>
+  <a routerLink="/scene/panels">panels</a>
+  <a routerLink="/scene/server">server</a>
+  <a routerLink="/scene/result">result</a>
+</div>
