--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,11 +11,10 @@
   }
 
   .popup-container {
-      @apply absolute w-screen h-auto p-10;
+      @apply absolute w-screen h-screen p-20 flex items-center justify-center;
   }
-
   .popup-container > div {
-      @apply relative bg-gray-100 text-gray-700 bg-opacity-95 w-full h-full rounded-xl px-7 py-5
+      @apply relative bg-gray-100 text-gray-700 bg-opacity-95 w-full h-auto rounded-xl px-7 py-5 max-w-[1200px];
   }
 
   .bumped {
