feat: :art: Better navigation and fix pipeline
Add style to menu bar and allow heavier builds

--- a/src/app/solar-panel-view/solar-panel-view.component.html
+++ b/src/app/solar-panel-view/solar-panel-view.component.html
@@ -3,7 +3,7 @@
       <h1>Panneaux solaires</h1>
       <a routerLink="/scene/home" class="close-button">╳</a>
 
-      <div class="bumped w-full rounded-lg mt-5">
+      <div class="bumped w-full rounded-lg mt-5 overflow-hidden">
         <div class="flex bg-gray-100">
           <div class="my-auto p-4">
             <span class="material-icons text-5xl text-yellow-500"> bolt </span>
