--- a/src/app/main-scene/main-scene.component.html
+++ b/src/app/main-scene/main-scene.component.html
@@ -5,15 +5,32 @@
   (clickResultEvent)="clickResult()"
 ></app-background-scene>
 
-<app-launch-view *ngIf="page == 'launch'" ></app-launch-view>
-<app-result-view *ngIf="page == 'result'" ></app-result-view>
-<app-server-view *ngIf="page == 'server'" ></app-server-view>
-<app-solar-panel-view *ngIf="page == 'panels'" ></app-solar-panel-view>
+<app-launch-view *ngIf="pageIsLaunch()" ></app-launch-view>
+<app-result-view *ngIf="pageIsResult()" ></app-result-view>
+<app-server-view *ngIf="pageIsServer()" ></app-server-view>
+<app-solar-panel-view *ngIf="pageIsPanels()" ></app-solar-panel-view>
 
-<div *ngIf="page == 'home'" class="absolute top-10 right-10 flex flex-col bg-white p-3">
-  <a routerLink="/scene/home">home</a>
-  <a routerLink="/scene/launch">launch</a>
-  <a routerLink="/scene/panels">panels</a>
-  <a routerLink="/scene/server">server</a>
-  <a routerLink="/scene/result">result</a>
+<div class="absolute w-full flex justify-center p-2 top-0 left-0">
+  <div class="flex rounded-xl bg-gray-100 opacity-70 pt-3 pb-1 px-3 text-gray-600">
+    <a routerLink="/scene/home" [ngClass]="pageIsHome() ? 'text-lime-500' : ''" class="flex flex-col text-center px-3">
+      <i class="material-icons  text-3xl">home</i>
+      <span class="mt-[-5px] text-sm ">Menu</span>
+    </a>
+    <a routerLink="/scene/launch" [ngClass]="pageIsLaunch() ? 'text-lime-500' : ''" class="flex flex-col text-center px-3">
+      <i class="material-icons text-3xl">send</i>
+      <span class="mt-[-5px] text-sm ">Lanceur</span>
+    </a>
+    <a routerLink="/scene/panels" [ngClass]="pageIsPanels() ? 'text-lime-500' : ''" class="flex flex-col text-center px-3">
+      <i class="material-icons text-3xl">wb_sunny</i>
+      <span class="mt-[-5px] text-sm ">Solaire</span>
+    </a>
+    <a routerLink="/scene/server" [ngClass]="pageIsServer() ? 'text-lime-500' : ''" class="flex flex-col text-center px-3">
+      <i class="material-icons text-3xl">dns</i>
+      <span class="mt-[-5px] text-sm ">Serveurs</span>
+    </a>
+    <a routerLink="/scene/result" [ngClass]="pageIsResult() ? 'text-lime-500' : ''" class="flex flex-col text-center px-3">
+      <i class="material-icons text-3xl">image</i>
+      <span class="mt-[-5px] text-sm ">Resultats</span>
+    </a>
+  </div>
 </div>
