--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@
       @apply absolute w-screen h-screen p-20 flex items-center justify-center;
   }
   .popup-container > div {
-      @apply relative bg-gray-100 text-gray-700 bg-opacity-95 w-full h-auto rounded-xl px-7 py-5 max-w-[1200px];
+      @apply relative z-20 bg-gray-100 text-gray-700 bg-opacity-95 w-full h-auto rounded-xl px-7 py-5 max-w-[1200px];
   }
 
   .bumped {
