--- a/src/app/server-view/server-view.component.html
+++ b/src/app/server-view/server-view.component.html
@@ -10,7 +10,7 @@
 
             <div class="block overflow-auto mt-5 w-full h-[65vh]">
               <table class="w-full">
-                <thead class="sticky top-0 bg-gray-100 bumped">
+                <thead class="sticky top-0 bg-gray-100">
                   <tr>
                     <th>Etat</th>
                     <th>Noeud</th>
@@ -21,7 +21,7 @@
                 </thead>
 
                 <tbody>
-                  <tr *ngFor="let i of [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]" class="w-full border-t-[1px] border-gray-300">
+                  <tr *ngFor="let task of tasks; index as i" (click)="clickList(i)" [ngClass]="i == selected ? 'bg-gray-200' : ''" class="w-full cursor-pointer border-t-[1px] border-gray-300">
                     <td>
                       <i class="material-icons text-3xl">play_arrow</i>
                     </td>
@@ -35,7 +35,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="bg-gray-200 text-xs p-1 bumped">20 tasks running</div>
+            <div class="bg-gray-200 text-xs p-1 bumped">{{tasks.length}} tasks running</div>
           </div>
 
           <div class="p-5 flex flex-col overflow-auto w-full">
@@ -43,7 +43,7 @@
 
               <div class="pt-5 bumped rounded-xl p-5 bg-gray-100">
                 <p class="text-gray-500">Server:</p>
-                <p class="font-bold text-2xl mt-[-10px]">ecotype-0</p>
+                <p class="font-bold text-2xl mt-[-10px]">{{tasks[selected].name}}</p>
 
                 <div class="bg-gray-200 p-5 rounded-lg text-gray-500 my-10">
                   Details server: TODO
