--- a/src/app/launch-view/launch-view.component.html
+++ b/src/app/launch-view/launch-view.component.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 
-    <button class="bumped bg-gray-100 rounded-full w-full py-2 text-xl flex justify-center">
+    <button (click)="uploadFiles" class="bumped bg-gray-100 rounded-full w-full py-2 text-xl flex justify-center">
       <span class="p-0.5 font-bold">Téléverser</span>
       <i class="material-icons !text-2xl px-2">send</i>
     </button>
