result view, solar panel view

--- a/src/app/result-view/result-view.component.html
+++ b/src/app/result-view/result-view.component.html
@@ -34,7 +34,7 @@
                 <p class="font-bold text-2xl mt-[-10px]">{{tasks[selected].name}}</p>
 
                 <div class="bg-gray-200 h-[300px] overflow-hidden pressed rounded-lg text-gray-500 my-3">
-                  <canvas class="h-full w-full"></canvas>
+                  <canvas #resultcanvas id="result-canvas" class="h-full w-full"></canvas>
                 </div>
 
                 <p class="text-sm text-gray-500 text-center">Utilisez votre souris pour faire tourner l'objet</p>
