--- a/src/app/solar-panel-view/solar-panel-view.component.html
+++ b/src/app/solar-panel-view/solar-panel-view.component.html
@@ -45,9 +45,9 @@
         </div>
       </div>
 
-      <div class="bg-gray-200 p-5 rounded-lg text-gray-500 mt-10">
+      <!-- <div class="bg-gray-200 p-5 rounded-lg text-gray-500 mt-10">
         Details panneaux: TODO
-      </div>
+      </div> -->
 
   </div>
 </div>
