feat: :zap: Handle websocket for web-api messagings

--- a/src/app/launch-view/launch-view.component.html
+++ b/src/app/launch-view/launch-view.component.html
@@ -40,9 +40,9 @@
             <label class="text-sm py-3">
               <div class="flex">
                 <span class="material-icons text-3xl text-lime-500"> nature </span>
-                <span class="font-bold text-lg p-1">Priorité</span>
+                <span class="font-bold text-lg p-1">Energie</span>
               </div>
-              <input type="range" min="0" max="2" [(ngModel)]="priority" class="w-full input-range" />
+              <input type="range" min="0" max="1" [(ngModel)]="energy" class="w-full input-range" />
               <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
             </label>
 
@@ -51,7 +51,7 @@
                 <span class="material-icons text-3xl text-yellow-500"> bolt </span>
                 <span class="font-bold text-lg p-1">Qualité</span>
               </div>
-                <input type="range" min="0" max="2" [(ngModel)]="quality" class="w-full input-range" />
+                <input type="range" min="0" max="1" [(ngModel)]="quality" class="w-full input-range" />
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
             </label>
         </div>
