--- a/src/app/main-scene/main-scene.component.html
+++ b/src/app/main-scene/main-scene.component.html
@@ -7,7 +7,7 @@
 
 <app-launch-view *ngIf="pageIsLaunch()" ></app-launch-view>
 <app-result-view *ngIf="pageIsResult()" ></app-result-view>
-<app-server-view *ngIf="pageIsServer()" ></app-server-view>
+<app-server-view *ngIf="pageIsServer()" [jobStatus]="jobsStatus" ></app-server-view>
 <app-solar-panel-view *ngIf="pageIsPanels()" ></app-solar-panel-view>
 
 <div class="absolute flex h-full p-2 top-0 left-0">
