--- a/src/app/server-view/server-view.component.html
+++ b/src/app/server-view/server-view.component.html
@@ -21,7 +21,7 @@
                 </thead>
 
                 <tbody>
-                  <tr *ngFor="let task of tasks; index as i" (click)="clickList(i)" [ngClass]="i == selected ? 'bg-gray-200' : ''" class="w-full cursor-pointer border-t-[1px] border-gray-300">
+                  <tr *ngFor="let job of jobStatus?.jobs; index as i" (click)="clickList(i)" [ngClass]="i == selected ? 'bg-gray-200' : ''" class="w-full cursor-pointer border-t-[1px] border-gray-300">
                     <td>
                       <i class="material-icons text-3xl">play_arrow</i>
                     </td>
@@ -36,7 +36,7 @@
               </table>
             </div>
             <div class="relative bg-gray-200 text-xs p-1 bumped">
-              <p>{{tasks.length}} tâche en cours</p>
+              <p>{{jobStatus?.number_of_running_jobs || "0"}} tâche en cours</p>
               <p class="absolute right-0 top-0 p-1">{{consommation_totale}} KWh</p>
             </div>
           </div>
@@ -44,16 +44,32 @@
           <div class="p-5 flex flex-col overflow-auto w-full">
               <h2>Détails de la tâche</h2>
 
-              <div class="pt-5 bumped rounded-xl p-5 bg-gray-100">
-                <p class="text-gray-500">Server:</p>
-                <p class="font-bold text-2xl mt-[-10px]">{{tasks[selected].name}}</p>
+              <div *ngIf="selected_job != undefined">
+                <div class="pt-5 bumped rounded-xl p-5 bg-gray-100">
+                  <p class="text-gray-500">Server:</p>
+                  <p class="font-bold text-2xl mt-[-10px]">{{selected_job.job_id}}</p>
 
-                <div class="bg-gray-200 p-5 rounded-lg text-gray-500 my-10">
-                  Details server: TODO
+                  <div class="bg-gray-200 p-5 rounded-lg text-gray-500 my-10">
+                    <ul>
+                      <li>last_paused_date: {{selected_job.last_paused_date}}</li>
+                      <li>last_started_date: {{selected_job.last_started_date}}</li>
+                      <li>pictures_quantity: {{selected_job.pictures_quantity}}</li>
+                      <li>politic: {{selected_job.politic}}</li>
+                      <li>state: {{selected_job.state}}</li>
+                      <li>step_idx: {{selected_job.step_idx}}</li>
+                    </ul>
+                  </div>
+
+                  <p class="text-gray-500">Consommation en temps réel (KWh)</p>
                 </div>
+              </div>
 
-                <p class="text-gray-500">Consommation en temps réel (KWh)</p>
-                <div class="max-h-[500px]" id="chart-server"></div>
+              <div #elseBlock class="flex m-auto text-center">
+                <p class="text-lg">Pas de tâche selectionnée</p>
+              </div>
+
+              <div class="overflow-hidden" [ngClass]="selected_job != undefined ? 'max-h-[500px]' : 'max-h-[10px]'" >
+                <div id="chart-server"></div>
               </div>
           </div>
       </div>
