--- a/src/app/solar-panel-view/solar-panel-view.component.html
+++ b/src/app/solar-panel-view/solar-panel-view.component.html
@@ -12,7 +12,7 @@
             <span class="text-5xl font-bold">{{production}}</span>
             <span class="text-3xl text-gray-500">watt</span>
           </div>
-          <div class="w-full p-2 m-3 pressed rounded-lg bg-gray-200">
+          <div class="w-full min-h-[230px] p-2 m-3 pressed rounded-lg bg-gray-200">
             <div id="chart-sun"></div>
           </div>
         </div>
