--- a/src/app/server-view/server-view.component.html
+++ b/src/app/server-view/server-view.component.html
@@ -1,77 +1,102 @@
 <div class="popup-container">
   <div class="p-3 w-full">
-      <h1>Serveurs</h1>
-      <a routerLink="/scene/home" class="close-button">╳</a>
+    <h1>Serveurs</h1>
+    <a routerLink="/scene/home" class="close-button">╳</a>
 
-      <div class="bumped rounded-xl my-3 flex flex-row">
+    <div class="bumped rounded-xl my-3 flex flex-row">
+      <div class="p-5 w-[60%]">
+        <h2>Liste des tâches</h2>
 
-          <div class="p-5 w-[60%]">
-            <h2>Liste des tâches</h2>
+        <div class="block overflow-auto mt-5 w-full h-[65vh]">
+          <table class="w-full">
+            <thead class="sticky top-0 bg-gray-100">
+              <tr>
+                <th>Etat</th>
+                <th>Noeud</th>
+                <th>Photos</th>
+                <th>Durée</th>
+                <th>Politique</th>
+              </tr>
+            </thead>
 
-            <div class="block overflow-auto mt-5 w-full h-[65vh]">
-              <table class="w-full">
-                <thead class="sticky top-0 bg-gray-100">
-                  <tr>
-                    <th>Etat</th>
-                    <th>Noeud</th>
-                    <th>Photos</th>
-                    <th>Durée</th>
-                    <th>Politique</th>
-                  </tr>
-                </thead>
-
-                <tbody>
-                  <tr *ngFor="let job of jobStatus?.jobs; index as i" (click)="clickList(i)" [ngClass]="i == selected ? 'bg-gray-200' : ''" class="w-full cursor-pointer border-t-[1px] border-gray-300">
-                    <td>
-                      <i class="material-icons text-3xl">play_arrow</i>
-                    </td>
-                    <td>ecotype-{{i}}</td>
-                    <td>x10 photos</td>
-                    <td>40:30</td>
-                    <td class="text-center font-2xl text-lime-500">
-                      <i class="material-icons">energy_savings_leaf</i>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="relative bg-gray-200 text-xs p-1 bumped">
-              <p>{{jobStatus?.number_of_running_jobs || "0"}} tâche en cours</p>
-              <p class="absolute right-0 top-0 p-1">{{consommation_totale}} KWh</p>
-            </div>
-          </div>
-
-          <div class="p-5 flex flex-col overflow-auto w-full">
-              <h2>Détails de la tâche</h2>
-
-              <div *ngIf="selected_job != undefined">
-                <div class="pt-5 bumped rounded-xl p-5 bg-gray-100">
-                  <p class="text-gray-500">Server:</p>
-                  <p class="font-bold text-2xl mt-[-10px]">{{selected_job.job_id}}</p>
-
-                  <div class="bg-gray-200 p-5 rounded-lg text-gray-500 my-10">
-                    <ul>
-                      <li>last_paused_date: {{selected_job.last_paused_date}}</li>
-                      <li>last_started_date: {{selected_job.last_started_date}}</li>
-                      <li>pictures_quantity: {{selected_job.pictures_quantity}}</li>
-                      <li>politic: {{selected_job.politic}}</li>
-                      <li>state: {{selected_job.state}}</li>
-                      <li>step_idx: {{selected_job.step_idx}}</li>
-                    </ul>
-                  </div>
-
-                  <p class="text-gray-500">Consommation en temps réel (KWh)</p>
-                </div>
-              </div>
-
-              <div #elseBlock class="flex m-auto text-center">
-                <p class="text-lg">Pas de tâche selectionnée</p>
-              </div>
-
-              <div class="overflow-hidden" [ngClass]="selected_job != undefined ? 'max-h-[500px]' : 'max-h-[10px]'" >
-                <div id="chart-server"></div>
-              </div>
-          </div>
+            <tbody>
+              <tr
+                *ngFor="let job of jobStatus?.jobs; index as i"
+                (click)="clickList(i)"
+                [ngClass]="i == selected ? 'bg-gray-200' : ''"
+                class="w-full cursor-pointer border-t-[1px] border-gray-300"
+              >
+                <td>
+                  <i class="material-icons text-3xl">{{ job.state }}</i>
+                </td>
+                <td>{{ job.node_id }}</td>
+                <td>x{{ job.pictures_quantity }} photos</td>
+                <td>
+                  {{ durationSince(job.last_started_date) }}
+                </td>
+                <td class="text-center font-2xl">
+                  {{ job.politic.energy == 'green' ? '<i
+                    class="material-icons text-lime-500"
+                  >
+                    energy_savings_leaf </i
+                  >' : '<i class="material-icons text-orange-400"> bolt </i>' }}
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="relative bg-gray-200 text-xs p-1 bumped">
+          <p>{{ jobStatus?.number_of_running_jobs || "0" }} tâche en cours</p>
+          <p class="absolute right-0 top-0 p-1">
+            {{ consommation_totale }} KWh
+          </p>
+        </div>
       </div>
+
+      <div class="p-5 flex flex-col overflow-auto w-full">
+        <h2>Détails de la tâche</h2>
+
+        <div *ngIf="selected_job != undefined">
+          <div class="pt-5 bumped rounded-xl p-5 bg-gray-100">
+            <p class="text-gray-500">Server:</p>
+            <p class="font-bold text-2xl mt-[-10px]">
+              {{ selected_job.job_id }}
+            </p>
+
+            <div class="bg-gray-200 p-5 rounded-lg text-gray-500 my-10">
+              <ul>
+                <li>
+                  last_paused_date:
+                  {{ timestampToHours(selected_job.last_paused_date) }}
+                </li>
+                <li>
+                  last_started_date:
+                  {{ timestampToHours(selected_job.last_started_date) }}
+                </li>
+                <li>pictures_quantity: {{ selected_job.pictures_quantity }}</li>
+                <li>politic: {{ selected_job.politic }}</li>
+                <li>state: {{ selected_job.state }}</li>
+                <li>step_idx: {{ selected_job.step_idx }}</li>
+              </ul>
+            </div>
+
+            <p class="text-gray-500">Consommation en temps réel (KWh)</p>
+          </div>
+        </div>
+
+        <div #elseBlock class="flex m-auto text-center">
+          <p class="text-lg">Pas de tâche selectionnée</p>
+        </div>
+
+        <div
+          class="overflow-hidden"
+          [ngClass]="
+            selected_job != undefined ? 'max-h-[500px]' : 'max-h-[10px]'
+          "
+        >
+          <div id="chart-server"></div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
